--- a/RubberBand.css
+++ b/RubberBand.css
@@ -1,13 +1,13 @@
-
-#RubberBandjs {
+#rubberband {
 	background: #8a99a6;
-	box-shadow: inset 0px -10px 25px -5px rgba(0,0,0,0.3);
 	height: 80px;
 	position: absolute;
 	top: -80px;
 	width: 100%;
+	box-shadow: inset 0px -10px 25px -5px rgba(0,0,0,0.3);
 }
-.rband {
+
+#rubberband .band {
 	color: white;
 	font-family: Arial, sans-serif;
 	font-size: 14px;
@@ -15,17 +15,22 @@
 	text-align: center;
 	text-shadow: 0px -1px 0px rgba(0,0,0,0.4);
 }
-.rband .text {
+
+#rubberband .band .text {
 	display: inline-block;
 	font-weight: 200;
 	margin: 0;
 	padding: 0;
 }
-.rband img {
+
+#rubberband .band img {
 	height: 16px;
 	margin-right: 20px;
 	position: relative;
 	top: 3px;
 	width: 16px;
 }
-.rband .load { display: none; }
+
+#rubberband .band .load {
+    display: none;
+}
